kubernetes/004-monitoring/002-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: gateway
      sectionName: https
      namespace: istio-ingress
  hostnames:
    - monitoring.kars.tinnirello-livio.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-stack-prometheus-grafana
          port: 80
